# tesseract-ocr

./: .gitignore  CMakeLists.txt  config_auto.h
